<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="32sp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4sp"
        android:text="@string/status_fragment_description"
        android:textAlignment="center"
        android:textSize="16sp"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="32sp">

            <ImageButton
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_play_circle_outline_24" />

            <ImageButton
                android:id="@+id/pauseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_pause_circle_outline_24" />

            <ImageButton
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_stop" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:text="@string/status_fragment_time_left_1"
            android:textAlignment="center"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/editRemainingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:text="--.--.--"
            android:textAlignment="center"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:text="@string/status_fragment_time_left_2"
            android:textAlignment="center"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/editStatusFragmentComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24sp"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp"
            />

        <ImageButton
            android:id="@+id/muteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_mute"
            android:layout_gravity="right"
            />


    </LinearLayout>

</RelativeLayout>